STAC-22737: Use topologyTime as is the most widely used in our spec

--- a/spec/kubernetes_logs.api.yaml
+++ b/spec/kubernetes_logs.api.yaml
@@ -22,7 +22,7 @@ paths:
         - $ref: "#/components/parameters/containerNames"
         - $ref: "#/components/parameters/direction"
         - $ref: "#/components/parameters/severity"
-        - $ref: "#/components/parameters/topologyTimestamp"
+        - $ref: "#/components/parameters/topologyTime"
       responses:
         "200":
           $ref: "#/components/responses/GetKubernetesLogsResult"
@@ -45,7 +45,7 @@ paths:
         - $ref: "#/components/parameters/containerNames"
         - $ref: "#/components/parameters/histogramBucketsCount"
         - $ref: "#/components/parameters/severity"
-        - $ref: "#/components/parameters/topologyTimestamp"
+        - $ref: "#/components/parameters/topologyTime"
       responses:
         "200":
           $ref: "#/components/responses/GetKubernetesLogsHistogramResult"
@@ -64,7 +64,7 @@ paths:
         - $ref: "#/components/parameters/to"
         - $ref: "#/components/parameters/podUID"
         - $ref: "#/components/parameters/cluster"
-        - $ref: "#/components/parameters/topologyTimestamp"
+        - $ref: "#/components/parameters/topologyTime"
       responses:
         "200":
           $ref: "#/components/responses/GetKubernetesLogsAutocompleteResult"
@@ -162,10 +162,10 @@ components:
         type: array
         items:
           $ref: "#/components/schemas/LogSeverity"
-    topologyTimestamp:
-      name: topologyTimestamp
+    topologyTime:
+      name: topologyTime
       in: query
-      description: "When time traveling instant when the pod was available"
+      description: "A timestamp at which the pod existed. If not given the pod is queried at current time."
       schema:
         type: integer
         format: instant
