STAC-22752: Add a display name to UserProfile

--- a/spec/user_profile.api.yaml
+++ b/spec/user_profile.api.yaml
@@ -135,6 +135,8 @@ components:
           readOnly: true
         name:
           type: string
+        displayName:
+          type: string
         description:
           type: string
         identifier:
