STAC-22404: Add icon to event component

--- a/spec/events.api.yaml
+++ b/spec/events.api.yaml
@@ -430,6 +430,8 @@ components:
           type: string
         name:
           type: string
+        iconbase64:
+          type: string
       required:
         - _type
         - id
