STAC-22404: Turn component type into a string

--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -920,8 +920,7 @@ components:
         metricQuery:
           type: string
         componentType:
-          type: integer
-          format: int64
+          type: string
         topN:
           type: integer
           format: int32
