STAC-22404: Turn component type into a string for notification configurations

--- a/spec/notification_configurations.api.yaml
+++ b/spec/notification_configurations.api.yaml
@@ -231,8 +231,7 @@ components:
         componentTypes:
           type: array
           items:
-            type: integer
-            format: int64
+            type: string
         componentTags:
           type: array
           items:
