STAC-22990: Full K8s name

--- a/spec/subject.xapi.yaml
+++ b/spec/subject.xapi.yaml
@@ -92,7 +92,7 @@ components:
       enum:
         - Static
         - Observability
-        - K8s
+        - Kubernetes
       type: string
     Query:
       type: string
