STAC-23501: A 401 on the route travels with an error body with more details for the user

--- a/spec/server_info.api.yaml
+++ b/spec/server_info.api.yaml
@@ -18,6 +18,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ServerInfo"
+        "401":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 components:
