--- a/spec/receiver_rbac.api.yaml
+++ b/spec/receiver_rbac.api.yaml
@@ -1,7 +1,7 @@
 # OpenApi header is included in this file to support code highlighting in VSCode
 openapi: 3.0.3
 info:
-  title: Receiver Features Api
+  title: Receiver Rbac Api
   version: "1.0.0"
 paths:
   /stsAgent/rbac/instance:
