STAC-23065: Address review comments

--- a/spec/receiver_topo_stream.api.yaml
+++ b/spec/receiver_topo_stream.api.yaml
@@ -177,10 +177,10 @@ components:
     TopologyStreamMessage:
       type: object
       properties:
-        datasource:
+        data_source:
           type:
             string
-        shardId:
+        shard_id:
           type: string
         collection_timestamp:
           type: integer
@@ -188,6 +188,6 @@ components:
         payload:
           $ref: "#/components/schemas/TopologyStreamPayload"
       required:
-        - datasource
+        - data_source
         - collection_timestamp
         - payload
