STAC-23065: Make evident that this api is not for production purposes

--- a/spec/receiver_topo_stream.api.yaml
+++ b/spec/receiver_topo_stream.api.yaml
@@ -4,7 +4,7 @@ info:
   title: Receiver Topo Stream ingestion Api
   version: "1.0.0"
 paths:
-  /topology:
+  /topology/debug:
     post:
       tags:
         - receiverTopologyStream
