STAC-223181: Restore version as optional parameter

--- a/spec/subject.xapi.yaml
+++ b/spec/subject.xapi.yaml
@@ -96,11 +96,15 @@ components:
       type: string
     Query:
       type: string
+    Version:
+      type: string
     CreateSubject:
       type: object
       properties:
         query:
           $ref: "#/components/schemas/Query"
+        version:
+          $ref: "#/components/schemas/Version"
     SubjectConfig:
       type: object
       properties:
