STAC-22985: Send optionally the owner. Facilitates testing otel mappings

--- a/spec/receiver_topo_stream.api.yaml
+++ b/spec/receiver_topo_stream.api.yaml
@@ -177,6 +177,12 @@ components:
     TopologyStreamMessage:
       type: object
       properties:
+        owner:
+          type: string
+          enum:
+            - TOPOLOGY_STREAM_OWNER_EXTERNAL
+            - TOPOLOGY_STREAM_OWNER_OTEL
+            - TOPOLOGY_STREAM_OWNER_AGENT
         data_source:
           type:
             string
