--- a/spec/components.api.yaml
+++ b/spec/components.api.yaml
@@ -24,6 +24,26 @@ paths:
         "500":
           $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
 
+  /components/{componentIdOrUrn}/checkStates:
+    get:
+      tags:
+        - component
+      summary: "Get a component checkstates"
+      description: "Get a component checkstates for a defined period of time by id"
+      operationId: getComponentCheckStates
+      parameters:
+        - $ref: "#/components/parameters/componentIdOrUrn"
+        - $ref: "#/components/parameters/startTime"
+        - $ref: "#/components/parameters/endTime"
+        - $ref: "#/components/parameters/topologyTime"
+      responses:
+        "200":
+          $ref: "#/components/responses/componentCheckStates"
+        "400":
+          $ref: "#/components/responses/componentNotFoundError"
+        "500":
+          $ref: "generic_error_handling.xapi.yaml#/components/responses/genericErrorsResponse"
+
 components:
   parameters:
     componentIdOrUrn:
@@ -70,6 +90,12 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/ComponentHealthHistory"
+    componentCheckStates:
+      description: "Checkstate Histories"
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ComponentCheckStates"
   schemas:
     ComponentIdOrUrn:
       type: string
@@ -77,11 +103,6 @@ components:
     ComponentId:
       type: integer
       format: int64
-    StreamIds:
-      type: array
-      items:
-        type: integer
-        format: int64
     ComponentHealthHistory:
       properties:
         id:
@@ -113,6 +134,28 @@ components:
       required:
         - timestamp
         - newHealth
+    ComponentCheckState:
+      properties:
+        id:
+          type: integer
+          format: int64
+        startTime:
+          type: integer
+          format: instant
+        endTime:
+          type: integer
+          format: instant
+      required:
+        - id
+        - startTime
+    ComponentCheckStates:
+      properties:
+        checkStateIds:
+          type: array
+          items:
+            $ref: "#/components/schemas/ComponentCheckState"
+      required:
+        - checkStateIds
     ComponentNotFoundError:
       type: object
       discriminator:
