--- a/spec/components.api.yaml
+++ b/spec/components.api.yaml
@@ -117,9 +117,8 @@ components:
         - newHealth
     ComponentCheckState:
       properties:
-        id:
-          type: integer
-          format: int64
+        checkStateId:
+          type: string
         startTime:
           type: integer
           format: instant
@@ -127,8 +126,9 @@ components:
           type: integer
           format: instant
       required:
-        - id
+        - checkStateId
         - startTime
+        - endTime
     ComponentCheckStates:
       properties:
         checkStateIds:
